--- a/app/views/home/home.component.html
+++ b/app/views/home/home.component.html
@@ -5,13 +5,13 @@
       <h1 class="text-center" style="margin-bottom: 20px">Panell d'administrador</h1>
       <div class="row">
         <div class="col">
-          <button class="btn btn-secondary" [routerLink]="['/admin/gestio_sales']" style="width: 100%;height: 50px">Gestionar sales</button>
+          <button class="btn btn-secondary" [routerLink]="['/admin/gestio_sales']" style="width: 100%;height: 100px"><h3>Gestionar sales</h3></button>
         </div>
         <div class="col">
-          <button class="btn btn-secondary" [routerLink]="['/admin/gestio_usuaris']" style="width: 100%;height: 50px">Gestionar usuaris</button>
+          <button class="btn btn-secondary" [routerLink]="['/admin/gestio_usuaris']" style="width: 100%;height: 100px"><h3>Gestionar usuaris</h3></button>
         </div>
         <div class="col">
-          <button class="btn btn-secondary" [routerLink]="['/admin/gestio_horaris']" style="width: 100%;height: 50px">Gestionar horaris de reunions</button>
+          <button class="btn btn-secondary" [routerLink]="['/admin/gestio_horaris']" style="width: 100%;height: 100px"><h3>Gestionar horaris de reunions</h3></button>
         </div>
       </div>
       <div class="row" style="padding-top: 40px">
@@ -49,10 +49,10 @@
         <div class="row">
           <div class="col-1"></div>
           <div class="col-5">
-            <button class="btn btn-secondary" [routerLink]="['/sales']" style="width: 100%;height: 50px">Sales disponibles</button>
+            <button class="btn btn-secondary" [routerLink]="['/sales']" style="width: 100%;height: 100px"><h3>Sales disponibles</h3></button>
           </div>
           <div class="col-5">
-            <button class="btn btn-secondary" [routerLink]="['/la_meva_sala']" style="width: 100%;height: 50px">La meva sala</button>
+            <button class="btn btn-secondary" [routerLink]="['/la_meva_sala']" style="width: 100%;height: 100px"><h3>La meva sala</h3></button>
           </div>
           <div class="col-1"></div>
         </div>
@@ -73,10 +73,10 @@
         <div class="row">
           <div class="col-1"></div>
           <div class="col-5">
-            <button class="btn btn-secondary" [routerLink]="['mentor/gestio_sales']" style="width: 100%;height: 50px">Les meves sales</button>
+            <button class="btn btn-secondary" [routerLink]="['mentor/gestio_sales']" style="width: 100%;height: 100px"><h3>Les meves sales</h3></button>
           </div>
           <div class="col-5">
-            <button class="btn btn-secondary" [routerLink]="['mentor/gestio_horaris']" style="width: 100%;height: 50px">Gestió d'horaris per reunions</button>
+            <button class="btn btn-secondary" [routerLink]="['mentor/gestio_horaris']" style="width: 100%;height: 100px"><h3>Gestió d'horaris per reunions</h3></button>
           </div>
           <div class="col-1"></div>
         </div>
