--- a/app/views/admin/gestio-sales/gestio-sales.component.html
+++ b/app/views/admin/gestio-sales/gestio-sales.component.html
@@ -1,11 +1,11 @@
 <app-navbar></app-navbar>
 <div class="container">
-  <h1 class="text-center">Sales disponibles</h1>
+  <h1 class="text-center" style="margin-bottom: 20px;margin-top: 20px">Sales disponibles</h1>
   <div class="row" style="margin-top: 20px">
-    <div class="col-lg-4 col-md-3 border border-secondary rounded" style="margin-bottom: 20px;background-color: rgba(238, 238, 238,0.75)" *ngFor="let sala of salas">
+    <div class="col-lg-4 col-md-3 border border-secondary rounded" style="margin-bottom: 40px;background-color: rgba(238, 238, 238,0.75)" *ngFor="let sala of salas">
       <div>
-        <h3 class="text-center">Sala {{sala.id}}</h3>
-        <h5 style="margin: 0">Mentor:</h5>
+        <h3 class="text-center" style="margin-top: 10px">Sala {{sala.id}}</h3>
+        <h5 style="margin: 0;font-weight: bold">Mentor:</h5>
         <ng-container *ngIf="sala.mentor === '';else mentor">
           <form [formGroup]="mentorForm" (ngSubmit)="assignaMentor(sala.id)" novalidate>
             <select class="form-select" formControlName="nom" autofocus>
@@ -22,14 +22,16 @@
             <p class="" style="margin: 0">{{mentors_dict.get(sala.mentor)}} <button style="float: right;display: block" class="btn btn-danger btn-sm" (click)="deleteMentorFromGroup(sala.id)">Expulsar</button></p>
           </div>
         </ng-template>
-        <h5>Alumnes:</h5>
-        <ng-container *ngFor="let user of users_list">
-          <ng-container *ngIf="user.sala === sala.id">
-            <div style="margin-bottom: 10px;margin-top: 10px">
-              <p class="" style="margin: 0">{{user.name}} {{user.second_name}} {{user.third_name}} <button style="float: right" class="btn btn-danger btn-sm" (click)="deleteUserFromGroup(user.uid)">Expulsar</button></p>
-            </div>
+        <div style="margin-top: 30px;margin-bottom: 30px">
+          <h5 style="font-weight: bold">Alumnes:</h5>
+          <ng-container *ngFor="let user of users_list">
+            <ng-container *ngIf="user.sala === sala.id">
+              <div style="margin-bottom: 10px;margin-top: 10px">
+                <p class="" style="margin: 0">{{user.name}} {{user.second_name}} {{user.third_name}} <button style="float: right" class="btn btn-danger btn-sm" (click)="deleteUserFromGroup(user.uid)">Expulsar</button></p>
+              </div>
+            </ng-container>
           </ng-container>
-        </ng-container>
+        </div>
       </div>
     </div>
   </div>
