--- a/app/views/estudiant/llista-sales/llista-sales.component.html
+++ b/app/views/estudiant/llista-sales/llista-sales.component.html
@@ -1,9 +1,9 @@
 <ng-container *ngIf="user">
 <app-navbar></app-navbar>
 <div class="container" style="padding-top: 20px">
-  <div class="row">
+  <div class="row" style="margin-bottom: 20px">
     <div class="col"></div>
-    <div class="col-6 text-center"><h2>Llistat de sales</h2></div>
+    <div class="col-6 text-center"><h1>Llistat de sales</h1></div>
     <div class="col"></div>
   </div>
   <div class="row">
@@ -11,7 +11,7 @@
       <div class="col-1"></div>
       <div class="col-4 border border-secondary rounded" style="margin-bottom: 20px;background-color: rgba(238, 238, 238,0.75)">
         <div>
-          <h3 class="text-center">Sala {{sala.id}}</h3>
+          <h3 class="text-center" style="margin: 10px">Sala {{sala.id}}</h3>
           <p style="margin: 0;font-weight: bold">Mentor: </p><p>{{mentors_dict.get(sala.mentor)}}</p>
           <p style="font-weight: bold;margin: 0">Alumnes:</p>
           <ng-container *ngFor="let i of users_list">
