--- a/app/views/mentor/horaris-mentor/horaris-mentor.component.html
+++ b/app/views/mentor/horaris-mentor/horaris-mentor.component.html
@@ -1,11 +1,11 @@
 <app-navbar></app-navbar>
 <div class="container">
-  <h1 class="text-center">Gestió d'horaris per reunions</h1>
+  <h1 class="text-center" style="margin-top: 20px;margin-bottom: 20px">Gestió d'horaris per reunions</h1>
   <div class="row">
     <div class="col">
       <div class="border border-secondary rounded" style="margin-top: 20px;background-color: rgba(238, 238, 238,0.75)">
         <div style="margin: 10px">
-          <h3>Horaris disponibles per reunions:</h3>
+          <h3 style="margin:10px">Horaris disponibles per reunions:</h3>
           <ul>
             <ng-container *ngFor="let horari of horaris_admin">
               <div style="margin-bottom: 10px;margin-top: 3px">
@@ -22,7 +22,7 @@
     <div class="col">
       <div class="border border-secondary rounded" style="margin-top: 20px;background-color: rgba(238, 238, 238,0.75)">
         <div style="margin: 10px">
-          <h3>Els meus horaris:</h3>
+          <h3 style="margin: 10px">Els meus horaris:</h3>
           <ul>
             <ng-container *ngFor="let horari of horaris_mentor">
               <div style="margin-bottom: 10px;margin-top: 3px">
