--- a/styles.scss
+++ b/styles.scss
@@ -3,7 +3,9 @@
 html, body { height: 100%; }
 body {
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  //font-family: Roboto, sans-serif;
+  font-family: Helvetica Neue, sans-serif;
   background-image: url('app/images/background.png');
-
+  background-size: 190%;
+  font-size: 18px;
 }
