--- a/app/views/estudiant/sala-usuari/sala-usuari.component.html
+++ b/app/views/estudiant/sala-usuari/sala-usuari.component.html
@@ -7,8 +7,8 @@
         <div class="col-6 text-center"><h1>Sala {{user.sala}}</h1></div>
         <div class="col"></div>
       </div>
-      <div class="row-cols-1">
-        <div class="col border border-3 border-secondary rounded" style="margin-bottom: 20px;background-color: rgba(238, 238, 238,0.75)">
+      <div class="row">
+        <div class="col-12 border border-3 border-secondary rounded" style="margin-bottom: 20px;background-color: rgba(238, 238, 238,0.75)">
           <div style="margin:10px">
             <h5>Els teus companys:</h5>
             <ul>
@@ -18,7 +18,7 @@
             </ul>
           </div>
         </div>
-        <div class="col border border-3 border-secondary rounded" style="margin-bottom: 20px;background-color: rgba(238, 238, 238,0.75)">
+        <div class="col-12 border border-3 border-secondary rounded" style="margin-bottom: 20px;background-color: rgba(238, 238, 238,0.75)">
           <div style="margin:10px">
             <h5>El teu mentor:</h5>
             <ng-container *ngIf="mentor.name != '';else no_mentor">
@@ -27,6 +27,40 @@
             <ng-template #no_mentor>
               <p>Encara no se us ha assignat cap mentor</p>
             </ng-template>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col border border-3 border-secondary rounded" style="margin-bottom: 20px;background-color: rgba(238, 238, 238,0.75)">
+          <div style="margin:10px">
+            <h5 class="text-center">Horaris disponibles del teu mentor:</h5>
+            <ng-container *ngIf="mentor.name != '';else no_mentor">
+              <ng-container *ngFor="let horari of horaris_mentor">
+                <div style="margin-bottom: 10px;margin-top: 3px">
+                  <li>{{horari | date:'dd-MM-yyyy h:mm a'}}
+                    <button style="float: right;display: block" class="btn btn-secondary btn-sm" (click)="escollirHorari(horari)">Escollir</button>
+                  </li>
+                </div>
+              </ng-container>
+            </ng-container>
+            <ng-template #no_mentor>
+              <p>Encara no se us ha assignat cap mentor</p>
+            </ng-template>
+          </div>
+        </div>
+        <div class="col-1"></div>
+        <div class="col border border-3 border-secondary rounded" style="margin-bottom: 20px;background-color: rgba(238, 238, 238,0.75)">
+          <div style="margin: 10px">
+            <h3 style="margin: 10px">Horaris escollits pel teu grup:</h3>
+            <ul>
+              <ng-container *ngFor="let horari of sala_horaris">
+                <div style="margin-bottom: 10px;margin-top: 3px">
+                  <li>{{horari | date:'dd-MM-yyyy h:mm a'}}
+                    <button style="float: right;display: block" class="btn btn-danger btn-sm" (click)="eliminarHorari(horari)">Eliminar</button>
+                  </li>
+                </div>
+              </ng-container>
+            </ul>
           </div>
         </div>
       </div>
