Creación vista gestión de estudiantes

--- a/app/views/home/home.component.html
+++ b/app/views/home/home.component.html
@@ -13,6 +13,9 @@
         <div class="col">
           <button class="btn btn-secondary" [routerLink]="['/admin/gestio_horaris']" style="width: 100%;height: 100px"><h3>Gestionar horaris de reunions</h3></button>
         </div>
+        <div class="col">
+          <button class="btn btn-secondary" [routerLink]="['/admin/gestio_estudiants']" style="width: 100%;height: 100px"><h3>Gestionar estudiants</h3></button>
+        </div>
       </div>
       <div class="row" style="padding-top: 40px">
         <div class="col"></div>
