Solucionados errores gestionar estudiantes

--- a/app/views/admin/gestio-estudiants/gestio-estudiants.component.html
+++ b/app/views/admin/gestio-estudiants/gestio-estudiants.component.html
@@ -23,7 +23,7 @@
                     <select class="form-select" formControlName="id" autofocus>
                       <option></option>
                       <ng-container *ngFor="let sala of sales_id_list">
-                        <option>{{sala}}</option>
+                        <option type="number">{{sala}}</option>
                       </ng-container>
                     </select>
                     <div style="margin-top: 5px; margin-bottom: 5px">
