Coger titulo de la bd

--- a/app/components/navbar/navbar.component.html
+++ b/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-dark bg-dark">
-  <a [routerLink]="['']" class="navbar-brand" style="margin-left: 10px">SISTEMES MULTIMÈDIA - Hackathon</a>
+  <a [routerLink]="['']" class="navbar-brand" style="margin-left: 10px">{{titol}}</a>
   <button class="btn btn-outline-light" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
           aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation" style="margin-right: 10px" (click)="signOut()">Tanca sessió</button>
 </nav>
