--- a/app/views/home/home.component.html
+++ b/app/views/home/home.component.html
@@ -13,8 +13,13 @@
         <div class="col">
           <button class="btn btn-secondary" [routerLink]="['/admin/gestio_horaris']" style="width: 100%;height: 100px"><h3>Gestionar horaris de reunions</h3></button>
         </div>
-        <div class="col">
+      </div>
+      <div class="row" style="margin-top: 20px">
+        <div class="col-md-4">
           <button class="btn btn-secondary" [routerLink]="['/admin/gestio_estudiants']" style="width: 100%;height: 100px"><h3>Gestionar estudiants</h3></button>
+        </div>
+        <div class="col-md-4">
+          <button class="btn btn-secondary" [routerLink]="['/admin/vista_global']" style="width: 100%;height: 100px"><h3>Vista global</h3></button>
         </div>
       </div>
       <div class="row" style="padding-top: 40px">
